--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mwispy"
-version = "1.0.0"
+version = "1.0.5"
 authors = [
   { name="Shaobo Zhang", email="shbzhang@pmo.ac.cn" },
 ]
@@ -15,6 +15,14 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+    "numpy >= 1.21.0",
+    "scipy >= 1.7.0",
+    "matplotlib >= 3.4.0",
+    "astropy >= 4.3",
+    "spectral_cube >= 0.6.2",
+    "tqdm >= 4.62.0",
 ]
 
 [project.urls]
